test(LottoResult): test 6 to 2 contains